--- a/styles/globals.css
+++ b/styles/globals.css
@@ -184,6 +184,11 @@ a {
   border-radius: 100%;
 }
 
+.table__container {
+  max-width: 80%;
+  margin: 3rem auto;
+}
+
 @media (min-width: 768px) {
   .menu__btn {
     display: none;
